--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -256,22 +256,22 @@ config PERFLOCK_SCREEN_POLICY
 config PERFLOCK_SCREEN_ON_MIN
         depends on PERFLOCK_SCREEN_POLICY
         int "Minimum speed while screen on"
-        default MSM_CPU_FREQ_ONDEMAND_MIN
+        default MSM_CPU_FREQ_MIN
 
 config PERFLOCK_SCREEN_ON_MAX
         depends on PERFLOCK_SCREEN_POLICY
         int "Maximum speed while screen on"
-        default MSM_CPU_FREQ_ONDEMAND_MAX
+        default MSM_CPU_FREQ_MAX
 
 config PERFLOCK_SCREEN_OFF_MIN
         depends on PERFLOCK_SCREEN_POLICY
         int "Minimum speed while screen off"
-        default MSM_CPU_FREQ_ONDEMAND_MIN
+        default MSM_CPU_FREQ_MIN
 
 config PERFLOCK_SCREEN_OFF_MAX
         depends on PERFLOCK_SCREEN_POLICY
         int "Maximum speed while screen off"
-        default MSM_CPU_FREQ_ONDEMAND_MIN
+        default 486000
 
 menu "MSM Board Selection"
 
@@ -1575,6 +1575,14 @@ config MSM_DALRPC_TEST
 config CPU_VOLTAGE_TABLE
 	bool "Enable CPU Voltage Table via sysfs for adjustements"
 	default n
+config CMDLINE_OPTIONS
+	bool "Enable cmdline khz/gov/maxscroff command parsing"
+	default n
+	help
+	  This enables the parsing of maxkhz=<VALUEinKHZ>,
+	  minkhz=<VALUEinKHZ>, governor=<GOVERNOR.NAME> and
+	  maxscroff=<VALUEinKHZ> commands from the kernels cmdline.
+	  This also enables a freq. cap while the screen if off.
 
 if CPU_FREQ_MSM
 
@@ -1596,14 +1604,6 @@ config MSM_CPU_FREQ_MIN
 	default 245760
 
 endif # CPU_FREQ_MSM
-
-config MSM_CPU_FREQ_ONDEMAND_MAX
-        int "Max"
-        default 384000
-
-config MSM_CPU_FREQ_ONDEMAND_MIN
-        int "Min"
-        default 245760
 
 config MSM_CPU_AVS
 	bool "Enable software controlled Adaptive Voltage Scaling (AVS)"
