makefile edits for wifi and such

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -417,7 +417,7 @@ obj-$(CONFIG_MACH_VIGOR) += board-vigor-mmc.o board-vigor-wifi.o
 obj-$(CONFIG_MACH_RUBY) += board-ruby.o mdm.o
 obj-$(CONFIG_MACH_RUBY) += board-ruby-audio.o
 obj-$(CONFIG_MACH_RUBY) += board-ruby-keypad.o
-# obj-$(CONFIG_MACH_RUBY) += htc_bdaddress.o htc_sleep_clk.o board-ruby-rfkill.o htc_fmtx_rfkill.o htc_util.o
+obj-$(CONFIG_MACH_RUBY) += htc_bdaddress.o htc_sleep_clk.o board-ruby-rfkill.o htc_util.o
 obj-$(CONFIG_MACH_RUBY) += htc_bdaddress.o htc_sleep_clk.o htc_util.o board-ruby-rfkill.o htc_fast_clk_8k.o
 obj-$(CONFIG_MACH_RUBY) += board-ruby-mmc.o board-ruby-wifi.o
 obj-$(CONFIG_MACH_RUBY) += htc_wifi_nvs.o
