KozmiK_defconfig: Updating to Alpha v0.2

--- a/arch/arm/configs/KozmiK_defconfig
+++ b/arch/arm/configs/KozmiK_defconfig
@@ -35,7 +35,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-KozmiKRuby-Alpha-v0.1-"
+CONFIG_LOCALVERSION="-KozmiKRuby-Alpha-v0.2-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1258,7 +1258,7 @@ CONFIG_DUMMY=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_TUN=y
+CONFIG_TUN=m
 # CONFIG_VETH is not set
 # CONFIG_MII is not set
 # CONFIG_PHYLIB is not set
@@ -1289,8 +1289,9 @@ CONFIG_LIBRA_SDIOIF=m
 CONFIG_WL12XX_MENU=m
 CONFIG_WL12XX=m
 # CONFIG_WL12XX_HT is not set
-# CONFIG_WL12XX_SPI is not set
-# CONFIG_WL12XX_SDIO is not set
+CONFIG_WL12XX_SPI=m
+CONFIG_WL12XX_SDIO=m
+# CONFIG_WL12XX_SDIO_TEST is not set
 CONFIG_WL12XX_PLATFORM_DATA=y
 CONFIG_TIWLAN_POWER_CONTROL_FUNC=y
 # CONFIG_ZD1211RW is not set
@@ -2725,7 +2726,11 @@ CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
 # CONFIG_CEPH_FS is not set
-# CONFIG_CIFS is not set
+CONFIG_CIFS=m
+# CONFIG_CIFS_STATS is not set
+# CONFIG_CIFS_WEAK_PW_HASH is not set
+# CONFIG_CIFS_XATTR is not set
+# CONFIG_CIFS_DEBUG2 is not set
 # CONFIG_NCP_FS is not set
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
