KozmiK_defconfig: Updating to v0.3

--- a/arch/arm/configs/KozmiK_defconfig
+++ b/arch/arm/configs/KozmiK_defconfig
@@ -35,7 +35,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-KozmiKRuby-Alpha-v0.2-"
+CONFIG_LOCALVERSION="-KozmiKRuby-v0.3-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -416,6 +416,7 @@ CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CMDLINE_OPTIONS=y
+CONFIG_MSM_MPDEC=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1566000
 CONFIG_MSM_CPU_FREQ_MIN=192000
@@ -562,6 +563,9 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_SMP=y
 CONFIG_SMP_ON_UP=y
+CONFIG_ARM_CPU_TOPOLOGY=y
+# CONFIG_SCHED_MC is not set
+# CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
 # CONFIG_ARM_ARCH_TIMER is not set
 CONFIG_VMSPLIT_3G=y
@@ -636,11 +640,12 @@ CONFIG_CPU_FREQ_TABLE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -656,6 +661,13 @@ CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
 CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
 CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
 CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
+CONFIG_CPU_FREQ_GOV_BADASS=y
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE=y
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=918000
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1188000
+CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS=y
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 CONFIG_CPU_IDLE=y
@@ -1290,9 +1302,8 @@ CONFIG_LIBRA_SDIOIF=m
 CONFIG_WL12XX_MENU=m
 CONFIG_WL12XX=m
 # CONFIG_WL12XX_HT is not set
-CONFIG_WL12XX_SPI=m
-CONFIG_WL12XX_SDIO=m
-# CONFIG_WL12XX_SDIO_TEST is not set
+# CONFIG_WL12XX_SPI is not set
+# CONFIG_WL12XX_SDIO is not set
 CONFIG_WL12XX_PLATFORM_DATA=y
 CONFIG_TIWLAN_POWER_CONTROL_FUNC=y
 # CONFIG_ZD1211RW is not set
@@ -1782,9 +1793,10 @@ CONFIG_THERMAL=y
 CONFIG_THERMAL_PM8901=y
 # CONFIG_THERMAL_PM8058 is not set
 # CONFIG_THERMAL_MSM_POPMEM is not set
-CONFIG_THERMAL_TSENS=y
-# CONFIG_THERMAL_TSENS8960 is not set
+# CONFIG_THERMAL_TSENS is not set
+CONFIG_THERMAL_TSENS8x60=y
 # CONFIG_THERMAL_PM8XXX is not set
+CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
@@ -2609,8 +2621,15 @@ CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-# CONFIG_XVMALLOC is not set
-# CONFIG_ZRAM is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_NUM_DEVICES=1
+CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
+# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_SNAPPY=y
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
 # CONFIG_ATH6K_LEGACY is not set
